@@ -2,6 +2,7 @@ Changes in Release 1.2.0
 =============================================
 [XSTJ-22] - non-zero exit codes from shell script
 [XSTJ-17] - multiple errors in --help documentation
+[XSTJ-16] - misleading error message on failed schema validation
 
 Changes in Release 1.1.4
 =============================================
